--- a/UsedCarsDeepEDAProcessing.slides.html
+++ b/UsedCarsDeepEDAProcessing.slides.html
@@ -13247,7 +13247,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Run-processing-pipeline-with-EDA-aggregations">Run processing pipeline with EDA aggregations<a class="anchor-link" href="#Run-processing-pipeline-with-EDA-aggregations">&#182;</a></h4>
+<h4 id="Run-processing-pipeline-with-Exploratory-Data-Analysis-(EDA)-aggregations">Run processing pipeline with Exploratory Data Analysis (EDA) aggregations<a class="anchor-link" href="#Run-processing-pipeline-with-Exploratory-Data-Analysis-(EDA)-aggregations">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -13756,8 +13756,8 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Data-Mining-Scenario">Data Mining Scenario<a class="anchor-link" href="#Data-Mining-Scenario">&#182;</a></h4><ul>
-<li>Identify Ford Cars upsell oppourtunities</li>
+<h4 id="Insight-Generation-Scenario">Insight Generation Scenario<a class="anchor-link" href="#Insight-Generation-Scenario">&#182;</a></h4><ul>
+<li>Identify upsell oppourtunities for Ford Cars</li>
 </ul>
 
 </div>
@@ -13794,8 +13794,8 @@ a.anchor-link {
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
 <li>Explore Ford vehicles along the "Fuel" and "Drive" dimensions</li>
-<li>Establish a confidence level in the legitimacy of a potential upsell oppourtunity</li>
-<li>Estimated Potential Additional Income per Upsell</li>
+<li>Establish a confidence level in the potential upsell oppourtunity</li>
+<li>Estimated Potential incremental Income per Upsell</li>
 </ul>
 
 </div>
@@ -13986,7 +13986,7 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Calculate-Upsell-oppourtunity-confidence-and-potential-additional-revenue">Calculate Upsell oppourtunity confidence and potential additional revenue<a class="anchor-link" href="#Calculate-Upsell-oppourtunity-confidence-and-potential-additional-revenue">&#182;</a></h4><ul>
+<h4 id="Calculate-confidence-and-potential-additional-revenue">Calculate confidence and potential additional revenue<a class="anchor-link" href="#Calculate-confidence-and-potential-additional-revenue">&#182;</a></h4><ul>
 <li>Extract required parameters from dataset</li>
 </ul>
 
@@ -14074,7 +14074,7 @@ a.anchor-link {
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
 <li>The p-value indicates high confidence that additional revenue can be driven by upselling from <strong>Ford Gas 4WD</strong> to <strong>Ford Diesel 4WD</strong></li>
-<li>The estimated additional income per upsell is <strong>$9610.78</strong></li>
+<li>The estimated incremental revenue per upsell is <strong>$9610.78</strong></li>
 </ul>
 
 </div>
@@ -14130,8 +14130,8 @@ a.anchor-link {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li>There's near certainty that additional revenue can be driven by upselling from <strong>Ford Gas FWD</strong> to <strong>Ford Gas 4WD</strong></li>
-<li>The estimated additional income per upsell is <strong>$7338.95</strong></li>
+<li>The p-value indicates high confidence that additional revenue can be driven by upselling from <strong>Ford Gas FWD</strong> to <strong>Ford Gas 4WD</strong></li>
+<li>The estimated incremental revenue per upsell is <strong>$7338.95</strong></li>
 </ul>
 
 </div>
